--- a/admin/.env
+++ b/admin/.env
@@ -1,1 +1,1 @@
-VITE_BACKEND_URL = "https://forever-server.vercel.app/"
+VITE_BACKEND_URL = "https://forever-server-4m3m6ek24-majdis-projects-845b67bc.vercel.app/"
